20-app/librespeed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"librespeed"},"name":"librespeed","namespace":"final"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/instance":"librespeed"}},"template":{"metadata":{"labels":{"app.kubernetes.io/instance":"librespeed"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"librespeed-env"}},{"secretRef":{"name":"librespeed-secret"}}],"image":"registry.rebrainme.com/work [...]
  creationTimestamp: "2025-06-03T09:05:27Z"
  generation: 3
  labels:
    app.kubernetes.io/instance: librespeed
  name: librespeed
  namespace: final
  resourceVersion: "9861"
  uid: 3e7d1fbe-d06a-477d-aa5c-4f5a81baeee7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: librespeed
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-06-03T09:26:46Z"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: librespeed
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: librespeed-env
        - secretRef:
            name: librespeed-secret
        image: registry.rebrainme.com/workshops/middle/kubernetes-local/newplatform_autochecks/speedtest:5.3
        imagePullPolicy: IfNotPresent
        name: librespeed
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /servers.json
          name: servers
          subPath: servers.json
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registrysecret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: librespeed-servers
        name: servers
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-06-03T09:27:05Z"
    lastUpdateTime: "2025-06-03T09:27:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-06-03T09:26:46Z"
    lastUpdateTime: "2025-06-03T09:27:05Z"
    message: ReplicaSet "librespeed-5bf68cbd6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
