20-app/librespeed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
spec:
  selector:
    app.kubernetes.io/instance: librespeed
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
