20-app/librespeed-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed-ingress
  namespace: final
  labels:
    app.kubernetes.io/instance: librespeed
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librespeed
                port:
                  number: 80
